--- a/2019_카카오_겨울인턴_크레인인형뽑기게임.ipynb
+++ b/2019_카카오_겨울인턴_크레인인형뽑기게임.ipynb
@@ -2,25 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "def solution(board, moves):\n",
     "    li = []\n",
-    "    \n",
-    "    for i in moves:\n",
+    "    count = 0\n",
+    "    idx = -1\n",
     "        \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    answer = 0\n",
+    "    for i in moves:\n",
+    "        for j in range(len(board)):\n",
+    "            if board[j][i-1] != 0:\n",
+    "                li.append(board[j][i-1])\n",
+    "                board[j][i-1] = 0\n",
+    "                idx += 1\n",
+    "                break\n",
+    "                \n",
+    "        if (idx > 0) and (li[idx] == li[idx-1]):\n",
+    "            li.pop()\n",
+    "            li.pop()\n",
+    "            idx -= 2\n",
+    "            count += 2  \n",
+    "            \n",
+    "    answer = count\n",
     "    return answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,12 +46,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "solution(board, moves)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
